force-app/main/default/objects/Verification__c/Verification__c.object-meta.xml
<CustomObject>
    <label>Verification</label>
    <nameField>
        <displayFormat>VEF - {0000}</displayFormat>
        <label>Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>