force-app/main/default/objects/Verification__c/fields/BM_Comments_for_Overall_Summary__c.field-meta.xml
<CustomField>
    <fullName>BM_Comments_for_Overall_Summary__c</fullName>
    <label>BM Comments for Overall Summary</label>
    <type>TextArea</type>
</CustomField>