force-app/main/default/objects/Verification__c/fields/BM_Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>BM_Recommended_Amount__c</fullName>
    <label>BM Recommended Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>