force-app/main/default/objects/Verification__c/fields/Borrower_name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_name__c</fullName>
    <formula>Application__r.Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower name</label>
    <type>Text</type>
</CustomField>