force-app/main/default/objects/Verification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>II Tranche</fullName>
            </value>
            <value>
                <fullName>Additional Loan</fullName>
            </value>
            <value>
                <fullName>Relogin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>