force-app/main/default/objects/Verification__c/fields/Customer_Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Amount__c</fullName>
    <label>Customer Request Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>