force-app/main/default/objects/Verification__c/fields/DBR__c.field-meta.xml
<CustomField>
    <fullName>DBR__c</fullName>
    <label>DBR</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>