force-app/main/default/objects/Verification__c/fields/FIV_B_Position__c.field-meta.xml
<CustomField>
    <fullName>FIV_B_Position__c</fullName>
    <label>FIV-B Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIV_B_Table_Caseflow</fullName>
                <default>true</default>
                <label>FIV_B_Table_Caseflow</label>
            </value>
            <value>
                <fullName>FIV_B_Table_Collateral</fullName>
            </value>
            <value>
                <fullName>FIV_B_Table_Character</fullName>
            </value>
            <value>
                <fullName>FIV_B_Table_Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>