force-app/main/default/objects/Verification__c/fields/I_hereby_declare__c.field-meta.xml
<CustomField>
    <fullName>I_hereby_declare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I hereby declare</label>
    <type>Checkbox</type>
</CustomField>