force-app/main/default/objects/Verification__c/fields/If_FIVB_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>If_FIVB_Report_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If FIVB Report Generated</label>
    <type>Checkbox</type>
</CustomField>