force-app/main/default/objects/Verification__c/fields/Initiate_From__c.field-meta.xml
<CustomField>
    <fullName>Initiate_From__c</fullName>
    <label>Initiate From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Login</fullName>
            </value>
            <value>
                <fullName>Lead Details</fullName>
            </value>
            <value>
                <fullName>Process Credit</fullName>
            </value>
            <value>
                <fullName>Approval Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>