force-app/main/default/objects/Verification__c/fields/Inspection_Time__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Time__c</fullName>
    <label>Inspection Time</label>
    <type>Time</type>
</CustomField>