force-app/main/default/objects/Verification__c/fields/Is_applic_co_applic_related__c.field-meta.xml
<CustomField>
    <fullName>Is_applic_co_applic_related__c</fullName>
    <label>Is app /co-app related/ known to FS emp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>