force-app/main/default/objects/Verification__c/fields/Is_applicant_co_applicant_related_kn__c.field-meta.xml
<CustomField>
    <fullName>Is_applicant_co_applicant_related_kn__c</fullName>
    <label>Is app /co-app related / known to FC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>