force-app/main/default/objects/Verification__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>Outside Credit</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Buying items for business</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Other Personal Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>