force-app/main/default/objects/Verification__c/fields/Remarks_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Declaration__c</fullName>
    <label>Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>