force-app/main/default/objects/Verification__c/fields/Sourcing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Officer__c</fullName>
    <label>Sourcing Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>