force-app/main/default/objects/Verification__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Verification#</label>
    <type>AutoNumber</type>
</CustomField>