force-app/main/default/objects/Verification__c/recordTypes/FIV_B.recordType-meta.xml
<RecordType>
    <fullName>FIV_B</fullName>
    <active>true</active>
    <label>FIV - B</label>
</RecordType>