force-app/main/default/objects/Verification__c/recordTypes/FIV_C.recordType-meta.xml
<RecordType>
    <fullName>FIV_C</fullName>
    <active>true</active>
    <label>FIV - C</label>
</RecordType>