force-app/main/default/objects/Verification__c/recordTypes/Online_EC.recordType-meta.xml
<RecordType>
    <fullName>Online_EC</fullName>
    <active>true</active>
    <label>Online EC</label>
</RecordType>