force-app/main/default/objects/Verification__c/recordTypes/PC.recordType-meta.xml
<RecordType>
    <fullName>PC</fullName>
    <active>true</active>
    <label>PC</label>
</RecordType>