force-app/main/default/objects/Verification__c/listViews/All_Verifications.listView-meta.xml
<ListView>
    <fullName>All_Verifications</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Verifications</label>
</ListView>