force-app/main/default/objects/Verification__c/listViews/My_Worklist.listView-meta.xml
<ListView>
    <fullName>My_Worklist</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Borrower_name__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Worklist</label>
</ListView>